Quartus_Sim-Em/Squeezenet/device/v1.3/squeezenet/bin_em/squeezenet_ST.6073.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/joerock/Documents/TFM/Quartus_Sim-Em/Squeezenet/device/v1.3/squeezenet/squeezenet_ST.cl" -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=211 -Xclang -ivfsoverlay-lib/home/joerock/intelFPGA_pro/21.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/joerock/Documents/TFM/Quartus_Sim-Em/Squeezenet/device/v1.3/squeezenet"
Setting target instruction set architecture to: Default (Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
/home/joerock/Documents/TFM/Quartus_Sim-Em/Squeezenet/device/v1.3/squeezenet/squeezenet_ST.cl:146:1: error: expected identifier or '('
/last layer use a 13 x 13 avgPool layer as classifier
^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
